{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 159,
  "lineage": "cca98466-c1fc-fdc8-ba72-704fd642b046",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "health_checks_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow AWS health checks to LoadBalancer",
            "from_port": 10254,
            "id": "sgrule-2281349809",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0240f6795b670c7df",
            "security_group_rule_id": "sgr-0598533ae3c33c894",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10254,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic from internet to LoadBalancer",
            "from_port": 80,
            "id": "sgrule-4047741711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0240f6795b670c7df",
            "security_group_rule_id": "sgr-0ff6f2ab056d557d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic from internet to LoadBalancer",
            "from_port": 443,
            "id": "sgrule-1852079404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0240f6795b670c7df",
            "security_group_rule_id": "sgr-048806aa008072c2f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeport_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow NodePort access within VPC",
            "from_port": 30000,
            "id": "sgrule-1538513833",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0240f6795b670c7df",
            "security_group_rule_id": "sgr-0ffda59074e44cf99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:security-group/sg-0240f6795b670c7df",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0240f6795b670c7df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from internet to LoadBalancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from internet to LoadBalancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow AWS health checks to LoadBalancer",
                "from_port": 10254,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10254
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow NodePort access within VPC",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a32a205b0c7de6a8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "retail-store-hbbr-cluster-20251207151402909400000005",
            "name_prefix": "retail-store-hbbr-cluster-",
            "owner_id": "463470973994",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-hbbr-cluster",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-hbbr-cluster",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:security-group/sg-0a32a205b0c7de6a8",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a32a205b0c7de6a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0240f6795b670c7df"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "retail-store-hbbr-node-20251207151402908900000004",
            "name_prefix": "retail-store-hbbr-node-",
            "owner_id": "463470973994",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-hbbr-node",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "owned"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-hbbr-node",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2093813501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0240f6795b670c7df",
            "security_group_rule_id": "sgr-07cfc3bff6acaafbf",
            "self": false,
            "source_security_group_id": "sg-0a32a205b0c7de6a8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3947211553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-037a2635187afef74",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-616393219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0e1e9489f3afa60f7",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3240262576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-048c621884f2ebb15",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-140516390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0cfd47acfd26ed5ca",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-456925191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-08c447aa1f08a501f",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2141000652",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-091537beebce7c22e",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3743192104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0b1d119a45fb9e44a",
            "self": false,
            "source_security_group_id": "sg-0240f6795b670c7df",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2662838034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0e60f4856b0c986a5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1464431916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0701709d5646f9227",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4078360259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a32a205b0c7de6a8",
            "security_group_rule_id": "sgr-0539862bc7bfbe530",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:network-acl/acl-097f0c666980edcd0",
            "default_network_acl_id": "acl-097f0c666980edcd0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-097f0c666980edcd0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "463470973994",
            "subnet_ids": [
              "subnet-037ed687e07ac8a08",
              "subnet-062e5d3916d7409f6",
              "subnet-07682e5a05a8bd158",
              "subnet-07ef8ecb3592343fb",
              "subnet-0fbc8450cce91214a",
              "subnet-0fc897ff636c46c72"
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:route-table/rtb-008aed60e0e0b5dcf",
            "default_route_table_id": "rtb-008aed60e0e0b5dcf",
            "id": "rtb-008aed60e0e0b5dcf",
            "owner_id": "463470973994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:security-group/sg-0a06c25f4f5440c30",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a06c25f4f5440c30",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "463470973994",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2b3814f440b09e6",
            "arn": "arn:aws:ec2:us-west-2:463470973994:elastic-ip/eipalloc-0f2b3814f440b09e6",
            "association_id": "eipassoc-04ce112420daea9da",
            "domain": "vpc",
            "id": "eipalloc-0f2b3814f440b09e6",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0add56fa7475d41be",
            "private_dns": "ip-10-0-0-56.us-west-2.compute.internal",
            "private_ip": "10.0.0.56",
            "public_dns": "ec2-44-235-48-10.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.48.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:internet-gateway/igw-02954a917e991d4f5",
            "id": "igw-02954a917e991d4f5",
            "owner_id": "463470973994",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2b3814f440b09e6",
            "association_id": "eipassoc-04ce112420daea9da",
            "connectivity_type": "public",
            "id": "nat-0a4dcc61d86c44286",
            "network_interface_id": "eni-0add56fa7475d41be",
            "private_ip": "10.0.0.56",
            "public_ip": "44.235.48.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-037ed687e07ac8a08",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e57056df0f69ff661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4dcc61d86c44286",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e57056df0f69ff66",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02954a917e991d4f5",
            "id": "r-rtb-0b1258701e7147f661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1258701e7147f66",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:route-table/rtb-0e57056df0f69ff66",
            "id": "rtb-0e57056df0f69ff66",
            "owner_id": "463470973994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4dcc61d86c44286",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:route-table/rtb-0b1258701e7147f66",
            "id": "rtb-0b1258701e7147f66",
            "owner_id": "463470973994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02954a917e991d4f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac548f05f3312bc6",
            "route_table_id": "rtb-0e57056df0f69ff66",
            "subnet_id": "subnet-07682e5a05a8bd158"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0206c0b9152ca6716",
            "route_table_id": "rtb-0e57056df0f69ff66",
            "subnet_id": "subnet-07ef8ecb3592343fb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df0d9e627a4d8790",
            "route_table_id": "rtb-0e57056df0f69ff66",
            "subnet_id": "subnet-0fc897ff636c46c72"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa549bbba70c2a26",
            "route_table_id": "rtb-0b1258701e7147f66",
            "subnet_id": "subnet-037ed687e07ac8a08"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686d9f5a83b15a54",
            "route_table_id": "rtb-0b1258701e7147f66",
            "subnet_id": "subnet-062e5d3916d7409f6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08031cf199096df58",
            "route_table_id": "rtb-0b1258701e7147f66",
            "subnet_id": "subnet-0fbc8450cce91214a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-07682e5a05a8bd158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07682e5a05a8bd158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-07ef8ecb3592343fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef8ecb3592343fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-0fc897ff636c46c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc897ff636c46c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-037ed687e07ac8a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ed687e07ac8a08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-062e5d3916d7409f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062e5d3916d7409f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:subnet/subnet-0fbc8450cce91214a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbc8450cce91214a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "463470973994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-hbbr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b5b840c5d2e46a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:463470973994:vpc/vpc-0b5b840c5d2e46a28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097f0c666980edcd0",
            "default_route_table_id": "rtb-008aed60e0e0b5dcf",
            "default_security_group_id": "sg-0a06c25f4f5440c30",
            "dhcp_options_id": "dopt-0841c79a6cd8b7cda",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5b840c5d2e46a28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-008aed60e0e0b5dcf",
            "owner_id": "463470973994",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-12-07",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAWX2IF2QVIXZAVNGYN",
              "Project": "retail-store"
            }
          },
          "dependencies": [
            "data.aws_caller_identity.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}